Fix page contrast (links) and element positioning.

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -56,3 +56,7 @@
 .Invisible {
   visibility: hidden;
 }
+
+a {
+ color: #3636F2;
+}
