--- a/src/Stories/Stories.css
+++ b/src/Stories/Stories.css
@@ -76,7 +76,7 @@
 {
   margin-right: 7px;
   display: inline;
-  color: #108ee9;
+  color: #3636F2;
   font-size: 24px;
 }
 
